--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                            <button id="phone-count-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
                         <h5>$<span id="phone-price">1219</span></h5>
-                        <img onclick="removeItem()" src="images/remove.png" alt="" class="remove-item">
+                        <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
                </div>
@@ -51,7 +51,7 @@
 
                         </div>
                         <h5>$<span id="case-price">59</span></h5>
-                        <img onclick="removeItem()" src="images/remove.png" alt="" class="remove-item">
+                        <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
                </div>
